[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "classic-db-utils"
version = "2.2.3"
license = "MIT"
authors = [
    {name = "Sergey Variasov", email = "variasov@gmail.com"},
]
description = "Набор утилит для обегчения создания композитов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4",
    "pymssql~=2.3",
    "build~=1.2.2.post1",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "twine~=4.0",
]

[tool.setuptools.packages.find]
where = ["sources"]
