[metadata]
name = classic-db-utils
version = 2.0.0
description = Provides connections pool for work with database
author = Sergei Variasov, Oliver Cope
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-db-utils
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources

[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.4.4
    pymssql==2.3.1
